feat: 多模块安全加固与部署优化
1. [CI/CD] 将 SSH 部署改为 Webhook 触发方式，移除服务器密钥依赖
2. [后端] 新增分类/标签名称唯一性校验，防止重复创建
3. [后端] 新增登录安全服务 (LoginSecurityService) 与会话管理服务 (AuthSessionService)
4. [后端] 新增 JWT 刷新令牌与 Cookie 安全配置 (secure/sameSite)
5. [后端] 优化 CORS 配置，支持环境变量动态设置允许域名
6. [前端] 移除 crypto-js 依赖，优化认证服务
7. [Docker] 生产环境新增 Cookie 安全与 CORS 配置项
8. [测试] 新增 XML 文件上传拒绝测试用例